test-suite/8-syntax_err.snapshot
Compilation: Failed
Output:
  main = 3 + #;
           ^
6:12: Syntax Error
